RESOLVED FIXED214773
Trying to lookup when WebView is in a popover causes process to hang.
https://bugs.webkit.org/show_bug.cgi?id=214773
Summary Trying to lookup when WebView is in a popover causes process to hang.
Megan Gardner
Reported 2020-07-24 17:50:53 PDT
Trying to lookup when WebView is in a popover causes process to hang.
Attachments
Patch (4.76 KB, patch)
2020-07-24 18:19 PDT, Megan Gardner
no flags
Patch (4.87 KB, patch)
2020-07-27 08:28 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-07-24 18:19:17 PDT
Devin Rousso
Comment 2 2020-07-24 19:19:14 PDT
Comment on attachment 405210 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405210&action=review > Source/WebKit/UIProcess/mac/WebContextMenuProxyMac.mm:355 > + if (!(((webView.get().window._childWindowOrderingPriority == NSWindowChildOrderingPriorityPopover) || [NSUserDefaults.standardUserDefaults boolForKey:@"LULookupDisabled"]) && items[i].action() == ContextMenuItemTagLookUpInDictionary)) Can we move the `((webView.get().window._childWindowOrderingPriority == NSWindowChildOrderingPriorityPopover) || [NSUserDefaults.standardUserDefaults boolForKey:@"LULookupDisabled"])` to a variable outside this loop so that it doesn't have to be recalculated in each iteration? ``` bool isPopover = m_webView->get().window._childWindowOrderingPriority == NSWindowChildOrderingPriorityPopover; bool isLookupDisabled = [NSUserDefaults.standardUserDefaults boolForKey:@"LULookupDisabled"]; for (auto& item : items) { if (item.action() != ContextMenuItemTagLookUpInDictionary || (!isLookupDisabled && !isPopover)) filteredItems.uncheckedAppend(item); } ```
Wenson Hsieh
Comment 3 2020-07-24 20:04:37 PDT
Comment on attachment 405210 [details] Patch It looks like you’ll need to add NSWindowChildOrderingPriorityPopover to NSWindowSPI.h as well.
Megan Gardner
Comment 4 2020-07-27 08:28:05 PDT
Devin Rousso
Comment 5 2020-07-27 09:07:26 PDT
Comment on attachment 405276 [details] Patch r=me
EWS
Comment 6 2020-07-27 10:04:03 PDT
Committed r264928: <https://trac.webkit.org/changeset/264928> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405276 [details].
Radar WebKit Bug Importer
Comment 7 2020-07-27 10:05:23 PDT
Note You need to log in before you can comment on or make changes to this bug.