Trying to lookup when WebView is in a popover causes process to hang. https://bugs.webkit.org/show_bug.cgi?id=214773 <rdar://problem/52317762>

Reviewed by Devin Rousso.

Source/WebCore/PAL:

* pal/spi/mac/NSWindowSPI.h:

Source/WebKit:

The Lookup framework does not populate the menus that it vends with the option to 'lookup'
words that are selected in popovers. WebKit should follow the pattern and not put the
item in the menu as Lookup is not able to handle this situation. Also if Lookup is disabled
via defaults, we should not show it in the menu.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::getContextMenuFromItems):


Canonical link: https://commits.webkit.org/227644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264928 268f45cc-cd09-0410-ab3c-d52691b4dbfc